<resources>
    <string name="app_name">Meus Contatos</string>
    <string name="e_mail">E-mail</string>
    <string name="repeat_password">Repetir Senha</string>
    <string name="password">Senha</string>
    <string name="register">Cadastrar</string>
    <string name="recover_password">Recuperar Senha</string>
    <string name="send_email">Enviar e-mail</string>
    <string name="login">Entrar</string>
    <string name="registerTv">Ainda não tem uma conta?</string>
    <string name="recoverTv">Esqueceu sua senha?</string>
    <string name="addContact">Adicionar Contato</string>
    <string name="phone">Telefone</string>
    <string name="name">Nome</string>
    <string name="exit">Sair</string>
</resources>